# everscan

./: .gitignore  Cargo.toml  GITIGNORE_GUIDE.md  README.md  config.toml.example  run_everscan.sh
src/: config.rs  lib.rs  main.rs  orchestrator.rs
src/clients/: coingecko_client.rs  coinmarketcap_client.rs  debank_client.rs  dune_client.rs  glassnode_client.rs  mod.rs
src/models/: metric.rs  mod.rs
src/storage/: mod.rs  postgres_repo.rs
src/tasks/: altcoin_season_task.rs  coingecko_task.rs  crypto_market_task.rs  fear_greed_task.rs  mod.rs  task_manager.rs
src/web/: api.rs  cache.rs  mod.rs  websocket.rs
static/: dashboard.html  index.html
