[package]
name = "everscan"
version = "0.1.0"
edition = "2021"
description = "区块链数据聚合平台 - 通过多个数据源API获取和聚合区块链数据"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# HTTP客户端
reqwest = { version = "0.11", features = ["json"] }

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }

# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 配置
toml = "0.8"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# 环境变量
dotenv = "0.15"

# 定时任务
cron = "0.12"

# 异步trait
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4" 