[package]
name = "everscan"
version = "0.1.0"
edition = "2021"
description = "区块链数据聚合平台 - 通过多个数据源API获取和聚合区块链数据"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
# 异步运行时
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"

# HTTP客户端
reqwest = { version = "0.11", features = ["json"] }

# Web框架 - 用于API和可视化界面
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
hyper = "1.0"

# WebSocket支持
tokio-tungstenite = "0.21"

# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 配置
toml = "0.8"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID生成
uuid = { version = "1.0", features = ["v4", "serde"] }

# 异步特征
async-trait = "0.1"

# 环境变量
dotenv = "0.15"

# 定时任务
cron = "0.12"

# 版本锁定以避免edition2024问题
base64ct = "1.6"

# Base64编码（用于某些API认证）
base64 = "0.21"

# 正则表达式（用于HTML解析）
regex = "1.0"

[dev-dependencies]
tokio-test = "0.4" 